--- a/trainee_time/.gitignore
+++ b/trainee_time/.gitignore
@@ -5,3 +5,8 @@
 /classesandobjects.class
 /forloop.class
 /twodimensional.class
+/Constructor.class
+/Cons_1.class
+/Method_overloading.class
+/Overridding.class
+/Calculater.class
