--- a/trainee_time/.gitignore
+++ b/trainee_time/.gitignore
@@ -10,3 +10,8 @@
 /Method_overloading.class
 /Overridding.class
 /Calculater.class
+/Abstraction.class
+/Facebook.class
+/Facebook1.class
+/Interface_program.class
+/Vehicle.class
