--- a/string/.gitignore
+++ b/string/.gitignore
@@ -1,1 +1,9 @@
 /PatternMatch.class
+/SplitMethod.class
+/StringTokenizer.class
+/Tokenizer.class
+/NameChange.class
+/Operator.class
+/example.class
+/Plus.class
+/StrinngBuffer.class
